<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_first"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/textview_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_fragment"
            app:layout_constraintBottom_toTopOf="@+id/button_first"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            app:layout_constraintBottom_toTopOf="@+id/btn_dialog_bottom_sheet"
            app:layout_constraintEnd_toEndOf="@+id/textview_first"
            app:layout_constraintStart_toStartOf="@+id/textview_first"
            app:layout_constraintTop_toBottomOf="@+id/textview_first" />

        <Button
            android:id="@+id/btn_dialog_bottom_sheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_sheet"
            app:layout_constraintBottom_toTopOf="@+id/btn_dialog"
            app:layout_constraintEnd_toEndOf="@+id/button_first"
            app:layout_constraintStart_toStartOf="@+id/button_first"
            app:layout_constraintTop_toBottomOf="@+id/button_first" />

        <Button
            android:id="@+id/btn_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simple_dialog"
            app:layout_constraintBottom_toTopOf="@+id/btn_dialog_fragment"
            app:layout_constraintEnd_toEndOf="@+id/btn_dialog_bottom_sheet"
            app:layout_constraintStart_toStartOf="@+id/btn_dialog_bottom_sheet"
            app:layout_constraintTop_toBottomOf="@+id/btn_dialog_bottom_sheet" />

        <Button
            android:id="@+id/btn_dialog_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_fragment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_dialog"
            app:layout_constraintStart_toStartOf="@+id/btn_dialog"
            app:layout_constraintTop_toBottomOf="@+id/btn_dialog" />

        <Button
            android:id="@+id/btn_dialog_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_activity"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_dialog"
            app:layout_constraintStart_toStartOf="@+id/btn_dialog"
            app:layout_constraintTop_toBottomOf="@+id/btn_dialog_fragment" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>